--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,4 +1,4 @@
-<h1>toppage</h1>
+<div class="company">toppage</div>
 <button type="button" class="btn btn-primary">事業内容</button>
 <button type="button" class="btn btn-success">施工実績</button>
 <a class="btn btn-primary" href="address" role="button">会社住所</a>
