ヘッダー、フッター

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,22 @@
   </head>
 
   <body>
+
+    <header>
+      <h6>ヘッダー</h6>
+      <a class="btn btn-primary" href="index" role="button">TOP</a>
+      <a class="btn btn-primary" href="address" role="button">会社住所</a>
+    </header>
+
     <%= yield %>
+
+    <footer>
+      <h6>フッター</h6>
+      <p>Copyright Hamada 2021.</p>
+    </footer>
+
       <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  
   </body>
 </html>
