施工実績ページ作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,9 @@
     <header>
       <h6>ヘッダー</h6>
       <a class="btn btn-primary" href="index" role="button">TOP</a>
-      <a class="btn btn-primary" href="address" role="button">会社住所</a>
+      <a class="btn btn-secondary" href="#" role="button">会社概要</a>
+      <a class="btn btn-warning" href="performance" role="button">施工実績</a>
+      <a class="btn btn-success" href="address" role="button">会社住所</a>
     </header>
 
     <%= yield %>
