--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,3 +1,6 @@
+.top{
+  font-size: 50px;
+}
 .company{
   font-size: 50px;
 }
@@ -6,4 +9,24 @@
 }
 .performance{
   font-size:30px;
+}
+
+/* header{
+  width: 100%;
+  background-color: #89c7de;
+  color: #fff;
+  text-align: center;
+  padding: 30px 0;
+  position: absolute;
+  bottom: 0;
+} */
+footer{
+  width: 100%;
+  background-color: #89c7de;
+  color: #fff;
+  text-align: center;
+  padding: 30px 0;
+
+  position: absolute;
+  bottom: 0;
 }
