--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -20,10 +20,17 @@
   position: absolute;
   bottom: 0;
 } */
+header{
+  width: 100%;
+  background-color:#f7f2b4;
+  height:90px;
+  text-align: center;
+}
 footer{
   width: 100%;
   background-color: #89c7de;
   color: #fff;
+  height:90px;
   text-align: center;
   padding: 30px 0;
 
